--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,8 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+Run npm run jest
+
 # Copy the rest of the application code
 COPY . .
 
